tests/expand/invalid_usage/invalid_enum.fail.rs
fn main() {
    #[clappen::clappen(export = test)]
    mod m2 {
        pub enum Foo {}
    }
}
